Fix bug where code outputs could go behind footer

--- a/client/src/css/_bottom-content.scss
+++ b/client/src/css/_bottom-content.scss
@@ -7,6 +7,7 @@
   border-top: 2px solid #dedede;
   display:flex;
   justify-content: space-between;
+  z-index: 500;
 
   .bottom-title {
     font-size: 14px;
